Removal of smells from inspection